package sample.dto

enum class NodeDirection {
    LEFT,DOWN,UP,RIGHT
}