package sample.dto;


public enum NodeType {
    ROAD,CONNECTOR,SPAWN
}
