@startuml

title __ARTGUI's Class Diagram__\n

  package sample {
    package sample.dto {
      class BoardDto {
      }
    }
  }
  

  package sample {
    package sample.model.car {
      class Car {
      }
    }
  }
  

  package sample {
    package sample.model.car {
      class CarFactory {
      }
    }
  }
  

  package sample {
    package sample.model.car {
      class CarHolder {
      }
    }
  }
  

  package sample {
    package sample.model.car {
      class CarId {
      }
    }
  }
  

  package sample {
    package sample.model.car {
      enum CarType {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      class CrossroadNode {
      }
    }
  }
  

  package sample {
    package sample.dto {
      class GetSavedBoardResponse {
      }
    }
  }
  

  package sample {
    class Main {
    }
  }
  

  package sample {
    package sample.model.node {
      class Neighbors {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      abstract class Node {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      enum NodeDirection {
      }
    }
  }
  

  package sample {
    package sample.dto {
      class NodeDto {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      class NodeId {
      }
    }
  }
  

  package sample {
    package sample.infastructure {
      class NodeMapper {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      class NodePosition {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      enum NodeType {
      }
    }
  }
  

  package sample {
    package sample.model.common {
      class Pair {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      class RoadNode {
      }
    }
  }
  

  package sample {
    package sample.dto {
      class SaveBoardRequest {
      }
    }
  }
  

  package sample {
    package sample.dto {
      class SimulationInfo {
      }
    }
  }
  

  package sample {
    package sample.dto {
      class SimulationResponse {
      }
    }
  }
  

  package sample {
    package sample.service {
      interface SimulationService {
      }
    }
  }
  

  package sample {
    package sample.service {
      class SimulationServiceImpl {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      class SpawnCarNode {
      }
    }
  }
  

  package sample {
    package sample.model.node {
      package sample.model.node.spawn {
        class SpawnNodeHolder {
        }
      }
    }
  }
  

  package sample {
    package sample.model.node {
      package sample.model.node.spawn {
        class SpawnStream {
        }
      }
    }
  }
  

  package sample {
    package sample.model.node {
      package sample.model.node.spawn {
        class SpawnStreamId {
        }
      }
    }
  }
  

  package sample {
    package sample.model.node {
      package sample.model.node.lights {
        class TrafficLightsHolder {
        }
      }
    }
  }
  

  package sample {
    package sample.model.node {
      package sample.model.node.lights {
        class TrafficLightsNode {
        }
      }
    }
  }
  

  Car o-- Node : head
  Car o-- CarId : id
  CrossroadNode -up-|> Node
  CrossroadNode o-- Node : left
  CrossroadNode o-- Node : right
  CrossroadNode o-- Node : top
  CrossroadNode o-- Node : bottom
  GetSavedBoardResponse o-- BoardDto : boardDto
  Main -up-|> Application
  Neighbors o-- Node : top
  Neighbors o-- Node : left
  Neighbors o-- Node : right
  Neighbors o-- Node : bottom
  Node o-- NodeType : type
  Node o-- NodeId : id
  Node o-- NodeDirection : direction
  Node o-- Neighbors : neighbors
  Node o-- NodePosition : position
  Node o-- CarId : carId
  NodeDto o-- NodeType : nodeType
  NodeDto o-- NodeDirection : direction
  Pair o-- F : first
  Pair o-- S : second
  RoadNode -up-|> Node
  SaveBoardRequest o-- BoardDto : boardDto
  SimulationServiceImpl -up-|> SimulationService
  SimulationServiceImpl o-- SimulationInfo : simulationInfo
  SpawnCarNode -up-|> Node
  SpawnCarNode o-- SpawnStreamId : spawnStreamId
  SpawnStream o-- SpawnStreamId : id
  TrafficLightsNode -up-|> Node


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
